apps/documentation/styles/globals.css
@import '@codaco/tailwind-config/fresco.css';
@import '@codaco/fresco-ui/styles.css';

@plugin '@tailwindcss/typography';

@layer base {
  body {
    @apply text-text;
    @apply bg-background;
  }

  code {
    @apply text-sm;
    @apply bg-rich-black/10 dark:bg-white/5;
    @apply p-[0.2rem];
    @apply rounded-sm;
  }
}

.DocSearch-Button {
  --docsearch-primary-color: var(--primary);
  --docsearch-text-color: var(--text);
  --docsearch-spacing: 2.5rem;
  --docsearch-icon-stroke-width: 2px;
  --docsearch-highlight-color: var(--docsearch-primary-color);
  --docsearch-muted-color: rgb(150, 159, 175);
  --docsearch-container-background: var(--background);
  --docsearch-logo-color: var(--primary);

  /* modal */
  --docsearch-modal-width: 560px;
  --docsearch-modal-height: 600px;
  --docsearch-modal-background: rgb(245, 246, 247);
  --docsearch-modal-shadow:
    inset 1px 1px 0 0 rgba(255, 255, 255, 0.5), 0 3px 8px 0 rgba(85, 90, 100, 1);

  /* searchbox */
  --docsearch-searchbox-height: 2.5rem;
  --docsearch-searchbox-background: var(--input);
  --docsearch-searchbox-focus-background: var(--input);
  --docsearch-searchbox-shadow: none;

  /* hit */
  --docsearch-hit-height: 56px;
  --docsearch-hit-color: rgb(68, 73, 80);
  --docsearch-hit-active-color: #fff;
  --docsearch-hit-background: #fff;
  --docsearch-hit-shadow: 0 1px 3px 0 rgb(212, 217, 225);

  /* key */
  --docsearch-key-gradient: linear-gradient(
    -225deg,
    rgb(213, 219, 228) 0%,
    rgb(248, 248, 248) 100%
  );
  --docsearch-key-shadow:
    inset 0 -2px 0 0 rgb(205, 205, 230), inset 0 0 1px 1px #fff,
    0 1px 2px 1px rgba(30, 35, 90, 0.4);
  --docsearch-key-pressed-shadow:
    inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
    0 1px 1px 0 rgba(30, 35, 90, 0.4);
  /* footer */
  --docsearch-footer-height: 44px;
  --docsearch-footer-background: #fff;
  --docsearch-footer-shadow:
    0 -1px 0 0 rgb(224, 227, 232), 0 -3px 6px 0 rgba(69, 98, 155, 0.12);

  @apply bg-input! m-0! h-10! w-full! rounded-sm! px-2!;
  @apply focusable!;

  border: 1px solid var(--outline);
  font-weight: inherit;
  color: inherit;

  .DocSearch-Button-Placeholder {
    @apply px-3! text-sm!;
  }
}

